# ceres

./: .gitignore  DESCRIPTION  NAMESPACE  README.md  ceres.Rproj  cleanup  configure  configure.ac  configure~
R/: RcppExports.R  ceres-package.R
inst/include/: ceres.h
inst/include/ceres/internal/: config.h
inst/pkgconfig/: gflags.pc
man/: ceres-package.Rd
src/: Makevars  Makevars.in  RcppExports.cpp  ceres_helloworld.cpp  rcppeigen_helloworld.cpp
src/ceres/include/ceres/internal/: config.h
src/ceres/lib/cmake/Ceres/: CeresConfig.cmake  CeresTargets.cmake
src/scripts/: ceres_cleanup.sh  ceres_download.sh  cmake_config.sh  eigen_download.sh  gflags_download.sh  glog_download.sh  r_config.sh
tools/: cmake_call.sh
